# OTUS_03

./: .pre-commit-config.yaml  README.md  mypy_run.sh  pyproject.toml
src/Advanced/: code01.py  code02.py  code03.py  code04.py  code05.py  code06.py  code07.py  code08.py  code09.py  code10.py  code11.py  code12.py  code13.py  code14.py  code15.py  code16.py  code17.py
src/Basic/: code01.py  code02.py  code03.py  code04.py  code05.py  code06.py  code07.py  code08.py  code09.py  code10.py  code11.py  code12.py
